fixed mobile layout issues

--- a/src/components/Home/NavBar/NavBar.scss
+++ b/src/components/Home/NavBar/NavBar.scss
@@ -21,6 +21,7 @@
 
 @media (max-width:480px){
     .navbar{
+            margin-left: -19px;
             position: fixed;
             font-weight: 600;
             z-index: 999;
@@ -29,7 +30,7 @@
             background-color: black;
             border: 0;
             &-left{
-                width: 50%;
+                width: 100%;
                 &-logo{
                     &>h3{
                         font-size: 1rem;
